test/files/neg/t876.check
t876.scala:25: error: too many arguments (found 2, expected 1) for method apply: (key: AssertionError.A): manager.B in class HashMap
        assert(manager.map(A2) == List(manager.map(A2, A1)))
                                                       ^
1 error
